feat: add infinite scrolling for mobile library content
